--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/node": "22.5.5",
     "@types/react": "18.3.6",
     "postcss": "^8",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.1",
     "typescript": "5.6.2"
   }
